--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body{
+  background-color: #ffdeca;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1{
+  text-align: center;
+  margin: 20px;
+  color:#2c1203;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 80%;
+  margin: auto;
+}
+
+.card {
+  margin: 20px auto;
+  max-width: 300px;
+  background: coral;
+  box-shadow: 3px 2px 3px silver;
+  transition: all 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 5px 5px 10px whitesmoke;
+}
+
+.textGroup {
+  padding: 10px 0;
+  text-align: center;
+  color: white;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 80%;
+  margin: auto;
+}
+
+.card {
+  margin: 20px auto;
+  max-width: 300px;
+  background: coral;
+  box-shadow: 3px 2px 3px silver;
+  transition: all 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 5px 5px 10px whitesmoke;
+}
+
+.textGroup {
+  padding: 10px 0;
+  text-align: center;
+  color: white;
 }
