--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,74 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap");
+
+* {
   margin: 0;
   padding: 0;
+  font-family: "Mulish", sans-serif;
 }
-body{
+
+body {
   background-color: #ffdeca;
 }
 
-h1{
+h1 {
   text-align: center;
   margin: 20px;
-  color:#2c1203;
+  color: #2c1203;
   text-transform: uppercase;
   text-decoration: underline;
 }
+
+.textGroup {
+  padding: 10px 0;
+  text-align: center;
+  color: white;
+}
+
+.infoText {
+  margin: 20px 0;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.action {
+  margin-top: 50px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.actionBtn {
+  width: 90%;
+  margin: auto;
+  color: #2c1203;
+  font-size: 18px;
+  padding: 5px 0;
+  margin: 5px 0;
+  text-transform: uppercase;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+.actionBtn:hover {
+  background-color: #ffdeca;
+}
+
+.actionBtn:active {
+  transform: scale(0.987);
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 80%;
+  margin: auto;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -21,7 +77,7 @@ h1{
 }
 
 .card {
-  display: Flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 20px auto;
@@ -31,19 +87,20 @@ h1{
   box-shadow: 3px 2px 3px silver;
   transition: all 0.3s ease-in-out;
 }
-.cardContent{
-  height: 300px;
-}
-
-.bioWrap{
-  color: whitesmoke;
-  margin: 15px;
-  text-align: justify;
-}
 
 .card:hover {
   transform: scale(1.03);
   box-shadow: 5px 5px 10px whitesmoke;
+}
+
+.cardContent {
+  height: 300px;
+}
+
+.bioWrap {
+  color: whitesmoke;
+  margin: 15px;
+  text-align: justify;
 }
 
 .textGroup {
@@ -52,3 +109,77 @@ h1{
   color: white;
 }
 
+h1 {
+  text-align: center;
+  margin: 20px;
+  color: #2c1203;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
+h3 {
+  color: #2c1203;
+  text-transform: uppercase;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+fieldset {
+  margin: 10px 0;
+  padding: 20px;
+}
+
+fieldset > * {
+  display: flex;
+}
+
+fieldset > * > * {
+  margin: 10px;
+}
+
+input {
+  font-size: 18px;
+}
+
+form > button {
+  font-size: 18px;
+  padding: 5px;
+  transition: all 0.3s ease;
+}
+
+form > button:active {
+  transform: scale(0.995);
+}
+
+hr {
+  margin: 30px 0;
+  height: 10px;
+  background-color: #2c1203;
+  outline: 0;
+  border: 0;
+}
+
+.app {
+  max-width: 700px;
+  margin: auto;
+}
+
+.list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.greenCard {
+  flex: 1;
+  color: white;
+  margin: auto;
+  margin: 5px;
+  padding: 15px;
+  background-color: darkcyan;
+}
